--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<h1>We all need to be a fan of traveling!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>We all need to be a fan of traveling!</h1>
 
 <br>
 
@@ -16,3 +25,5 @@
 <blockquote cite="https://theplanetd.com/the-ultimate-travel-quotes-as-chosen-by-you/">
     <p><em>“The world is a book and those who do not travel read only one page.” ~ Saint Augustine</em></p>
 </blockquote>
+</body>
+</html>
