Added forms to the fan page

--- a/index.html
+++ b/index.html
@@ -25,5 +25,55 @@
 <blockquote cite="https://theplanetd.com/the-ultimate-travel-quotes-as-chosen-by-you/">
     <p><em>“The world is a book and those who do not travel read only one page.” ~ Saint Augustine</em></p>
 </blockquote>
+
+<h2>Get in touch and tell me more about your adventures!</h2>
+
+
+<form onsubmit="">       
+
+  <label for="name">Name</label>
+  <input type="text" id="name" name="name" placeholder="Your name">
+
+   <br><br>
+  
+  <label for="email">Email</label>
+  <input type="text" id="email" name="email" placeholder="Enter Email"> 
+  
+   <br><br>
+  <p>Have I changed your mind about traveling?</p>
+  <input type="radio" name="question" value="changed">
+  <label for="question">You have changed my mind</label><br>
+  <input type="radio" name="question1" value="no-change">
+  <label for="question1">I already loved traveling and will continue</label><br>  
+  <input type="radio" name="question2" value="never">
+  <label for="question2">Nah i'd rather not travel</label>
+  
+  <br><br>
+
+  <p>Below are a few counrties I would loove to travel to. Which ones would you like to see as well?</p>
+
+  <input type="checkbox" name="countries" value="Bali">
+  <label for="countries1">Bali</label><br>
+  <input type="checkbox" name="countries" value="South-Africa">
+  <label for="countries2">South-Africa</label><br>  
+  <input type="checkbox" name="countries" value="Brazil">
+  <label for="countries3">Brazil</label>
+  <!-- <input type="checkbox" name="counrties" value="None">
+  <label for="countries4">None</label> -->
+
+  <br><br>
+
+  <label for="subject">Tell me more about your adventures, past, present and future!</label>
+  <br>
+  <textarea id="subject" name="subject" placeholder="Tell me about your travels!">
+  </textarea>           
+
+  <br><br>
+
+  
+  <input type="submit" value="Submit">
+</form>
+
+
 </body>
 </html>
