Added video and image folders and alsso added images and a video to the page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Travel Fan Page</title>
 </head>
-<body>
+<body style="background-color: lightskyblue;">
     <h1>We all need to be a fan of traveling!</h1>
 
 <br>
@@ -54,12 +54,17 @@
 
   <input type="checkbox" name="countries" value="Bali">
   <label for="countries1">Bali</label><br>
+  <!-- <img src="/Users/aisha/HTML-Lesson-2/images/Bali.jpeg" alt="picture of a tower on water in Bali" width="300px" height="200px"> -->
+  <iframe width="300px" height="200px" src="videos/videoblocks-waves-rolling-on-manta-bay-or-kelingking-beach-on-nusa-penida-island-bali-indonesia_ragw3zrj__fa72eb9220f2ba6badd045ab9d72648f__P360.mp4" title="Waves Crashing in Bali" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"> </iframe><br>
   <input type="checkbox" name="countries" value="South-Africa">
   <label for="countries2">South-Africa</label><br>  
+  <img src="images/South-Africa.jpeg" alt="Picture of South Africa" width="300px" height="200px"><br>
   <input type="checkbox" name="countries" value="Brazil">
-  <label for="countries3">Brazil</label>
-  <!-- <input type="checkbox" name="counrties" value="None">
-  <label for="countries4">None</label> -->
+  <label for="countries3">Brazil</label><br>
+  <img src="images/Brazil.jpeg" alt="Picture of Brazil's ocean and mountains" width="300px" height="200px"><br>
+  <input type="checkbox" name="counrties" value="None">
+  <label for="countries4">None</label><br>
+  <img src="images/giphy.gif" alt="gif of guy shaking his head with writing: not feeling it" width="300px" height="200px">
 
   <br><br>
 
