--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Fan Page</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body style="background-color: lightskyblue;">
+<body>
     <h1>We all need to be a fan of traveling!</h1>
 
 <br>
