changed the format of the site using flexbox styling

--- a/index.html
+++ b/index.html
@@ -8,77 +8,81 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>We all need to be a fan of traveling!</h1>
+    
+    <div class="title"><h1>We all need to be a fan of traveling!</h1></div>
+    <div class="container">
+    <img src="https://sites.google.com/site/justhavefuntraveling/_/rsrc/1460403216141/home/928749.jpg" alt="traveling-img" width="300px"  height="300px" >
+    <div class="content">
+    <p>I love the idea of traveling and I am hoping to someday be able to travel to as many countries as possible. I think it is so important as humans to experience the world other humas live in.</p>
+    <br>
+    </div>
+    </div>
+    <div class="container">
+    <strong>Here are a few reasons you should want to travel too:</strong>
 
-<br>
+    <ul>
+        <li>Travel Reduces stress</li>
+        <li>Travel Lowers the Risk of Depression</li>
+        <li>Travel Boosts Happiness and Satisfaction.</li>
+    </ul>
 
-<p>I love the idea of traveling and I am hoping to someday be able to travel to as many countries as possible. I think it is so important as humans to experience the world other humas live in.</p>
-
-<strong>Here are a few reasons you should want to travel too:</strong>
-
-<ul>
-    <li>Travel Reduces stress</li>
-    <li>Travel Lowers the Risk of Depression</li>
-    <li>Travel Boosts Happiness and Satisfaction.</li>
-</ul>
-
-<p>My favourite quote about traveling the world says: </p>
-<blockquote cite="https://theplanetd.com/the-ultimate-travel-quotes-as-chosen-by-you/">
+    <p>My favourite quote about traveling the world says: </p>
+    <blockquote cite="https://theplanetd.com/the-ultimate-travel-quotes-as-chosen-by-you/">
     <p><em>“The world is a book and those who do not travel read only one page.” ~ Saint Augustine</em></p>
-</blockquote>
+    </blockquote>
+    </div>
+    <h2>Get in touch and tell me more about your adventures!</h2>
 
-<h2>Get in touch and tell me more about your adventures!</h2>
 
+    <form onsubmit="">       
 
-<form onsubmit="">       
+    <label for="name">Name</label>
+    <input type="text" id="name" name="name" placeholder="Your name">
 
-  <label for="name">Name</label>
-  <input type="text" id="name" name="name" placeholder="Your name">
-
-   <br><br>
+    <br><br>
   
-  <label for="email">Email</label>
-  <input type="text" id="email" name="email" placeholder="Enter Email"> 
+    <label for="email">Email</label>
+    <input type="text" id="email" name="email" placeholder="Enter Email"> 
   
-   <br><br>
-  <p>Have I changed your mind about traveling?</p>
-  <input type="radio" name="question" value="changed">
-  <label for="question">You have changed my mind</label><br>
-  <input type="radio" name="question1" value="no-change">
-  <label for="question1">I already loved traveling and will continue</label><br>  
-  <input type="radio" name="question2" value="never">
-  <label for="question2">Nah i'd rather not travel</label>
+    <br><br>
+    <p>Have I changed your mind about traveling?</p>
+    <input type="radio" name="question" value="changed">
+    <label for="question">You have changed my mind</label><br>
+    <input type="radio" name="question1" value="no-change">
+    <label for="question1">I already loved traveling and will continue</label><br>  
+    <input type="radio" name="question2" value="never">
+    <label for="question2">Nah i'd rather not travel</label>
   
-  <br><br>
+    <br><br>
 
-  <p>Below are a few counrties I would loove to travel to. Which ones would you like to see as well?</p>
+    <p>Below are a few counrties I would loove to travel to. Which ones would you like to see as well?</p>
 
-  <input type="checkbox" name="countries" value="Bali">
-  <label for="countries1">Bali</label><br>
-  <!-- <img src="/Users/aisha/HTML-Lesson-2/images/Bali.jpeg" alt="picture of a tower on water in Bali" width="300px" height="200px"> -->
-  <iframe width="300px" height="200px" src="videos/videoblocks-waves-rolling-on-manta-bay-or-kelingking-beach-on-nusa-penida-island-bali-indonesia_ragw3zrj__fa72eb9220f2ba6badd045ab9d72648f__P360.mp4" title="Waves Crashing in Bali" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"> </iframe><br>
-  <input type="checkbox" name="countries" value="South-Africa">
-  <label for="countries2">South-Africa</label><br>  
-  <img src="images/South-Africa.jpeg" alt="Picture of South Africa" width="300px" height="200px"><br>
-  <input type="checkbox" name="countries" value="Brazil">
-  <label for="countries3">Brazil</label><br>
-  <img src="images/Brazil.jpeg" alt="Picture of Brazil's ocean and mountains" width="300px" height="200px"><br>
-  <input type="checkbox" name="counrties" value="None">
-  <label for="countries4">None</label><br>
-  <img src="images/giphy.gif" alt="gif of guy shaking his head with writing: not feeling it" width="300px" height="200px">
+    <input type="checkbox" name="countries" value="Bali">
+    <label for="countries1">Bali</label><br>
+    <!-- <img src="/Users/aisha/HTML-Lesson-2/images/Bali.jpeg" alt="picture of a tower on water in Bali" width="300px" height="200px"> -->
+    <iframe width="300px" height="200px" src="videos/videoblocks-waves-rolling-on-manta-bay-or-kelingking-beach-on-nusa-penida-island-bali-indonesia_ragw3zrj__fa72eb9220f2ba6badd045ab9d72648f__P360.mp4" title="Waves Crashing in Bali" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"> </iframe><br>
+    <input type="checkbox" name="countries" value="South-Africa">
+    <label for="countries2">South-Africa</label><br>  
+    <img src="images/South-Africa.jpeg" alt="Picture of South Africa" width="300px" height="200px"><br>
+    <input type="checkbox" name="countries" value="Brazil">
+    <label for="countries3">Brazil</label><br>
+    <img src="images/Brazil.jpeg" alt="Picture of Brazil's ocean and mountains" width="300px" height="200px"><br>
+    <input type="checkbox" name="counrties" value="None">
+    <label for="countries4">None</label><br>
+    <img src="images/giphy.gif" alt="gif of guy shaking his head with writing: not feeling it" width="300px" height="200px">
 
-  <br><br>
+    <br><br>
 
-  <label for="subject">Tell me more about your adventures, past, present and future!</label>
-  <br>
-  <textarea id="subject" name="subject" placeholder="Tell me about your travels!">
-  </textarea>           
+    <label for="subject">Tell me more about your adventures, past, present and future!</label>
+    <br>
+    <textarea id="subject" name="subject" placeholder="Tell me about your travels!">
+    </textarea>           
 
-  <br><br>
+    <br><br>
 
   
-  <input type="submit" value="Submit">
-</form>
+    <input type="submit" value="Submit">
+    </form>
 
 
 </body>
